# wbsmaker

./: .gitignore  CLAUDE.md  DESIGN.md  FIXES.md  LEARNING.md  LEARNING_V0.md  PLAN.md  README.md  ROADMAP.md  ROUND3.md  grok.md  pyproject.toml  wbs.toml
cases/: baseline_scorecard.json  case-11108.json
docs/: 操作說明.html
packaging/: README_測試說明.md  install.ps1
profiles/: default.toml
scripts/: migrate_case_11108.py
src/wbsgen/: cases.py  cli.py  config.py  eval.py  manifest.py  models.py  profile.py  review.py  textutil.py
src/wbsgen/llm/: client.py
src/wbsgen/llm/prompts/: build_relations_v1.txt  classify_content_v1.txt  extract_work_items_v1.txt  generate_local_wbs_v1.txt  merge_global_wbs_v1.txt  validate_wbs_v1.txt
src/wbsgen/stages/: s01_parse.py  s02_quality.py  s03_layout.py  s04_subdoc.py  s05_toc.py  s06_section.py  s07_table.py  s08_assemble.py  s09_classify.py  s10_extract.py  s11_relate.py  s12_localwbs.py  s13_merge.py  s14_validate.py  s15_export.py
src/wbsgen/templates/: wbs_viz_template.html
tests/golden/: expected.json  test_golden.py
tests/unit/: test_cases_p2.py  test_eval_p3.py  test_no_business_literals.py  test_no_garbled_in_llm.py  test_profile_p1.py  test_review_p4.py
